organize the documentaiton better